# omeka-tools

./: .env.example  .gitignore  LICENSE  client.py  metadata_categories.yaml  metadata_categories_global.yaml  omeka_extractor.py  pyproject.toml  utils.py
notebooks/: 1.Extract_Omeka_Items.ipynb  2.Analyze_Omeka_Metadata.ipynb  3.Link_Items_KG.ipynb  A.Prepare_for_KG_Integration.ipynb  B.Omeka2Qdrant.ipynb  C.Text2KG_Preparation.ipynb
src/omeka_tools/: __init__.py  client.py  omeka_extractor.py  utils.py
src/omeka_tools/standarize/: dates.py
