[project]
name = "omeka-tools"
version = "0.1.0"
description = "Python client to query Omeka API"
authors = [
    {name = "dante.am",email = "dante.avino@alum.esci.upf.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
